--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -38,6 +38,12 @@
   text-decoration: none;
 }
 
+@media screen and (max-width: 950px) {
+  .navbar {
+    padding-top: 30px;
+  }
+
+}
 @media screen and (max-width: 830px) {
   .navbar {
     flex-direction: column;
