--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -19,7 +19,6 @@
   list-style: none;
   gap: 26px;
   width: 100%;
-
 }
 
 .image {
@@ -39,7 +38,6 @@
   align-items: flex-start;
   color: var(--color-text);
   z-index: 1;
-  background-color: red;
 }
 
 
@@ -129,6 +127,7 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    margin-top: 2%;
   }
 
   .content {
@@ -141,7 +140,7 @@
     z-index: 0;
     border-radius: 50%;
     margin-bottom: 5vh;
-    min-width:300px;
+    min-width:250px;
 
   }
 
@@ -156,5 +155,9 @@
 
   .description {
     font-size: calc(1rem + 1vw); /* Utilisation de vw pour ajuster la taille du texte en fonction de la largeur de la fenêtre */
+  }
+
+  .links {
+    justify-content: center;
   }
 }
