--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,6 +12,7 @@
   padding-top: 5rem;
 }
 .title {
+
   color: var(--color-text);
   font-size: 35px;
   font-weight: 700;
@@ -62,7 +63,7 @@
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: x-small;
+  font-size:medium;
   font-weight: 500;
   letter-spacing: 1.5px;
 }
