--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -2,7 +2,6 @@
 
 .container {
   color: var(--color-text);
-  margin-top: 10%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -119,17 +118,23 @@
   margin-left: 17px;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 967px) {
   .content {
     flex-direction: column;
     align-items: center;
     gap: 34px;
   }
 
+  .container {
+    margin-top: 3%;
+  }
   .skills {
     width: 100%;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 50px;
+
   }
 
   .history {
