--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -127,7 +127,7 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    margin-top: 2%;
+    margin-top: 30px;
   }
 
   .content {
