--- a/src/App.module.css
+++ b/src/App.module.css
@@ -56,6 +56,24 @@ body {
   animation: draw 8s ease;
 }
 
+.preloader {
+  height: 100vh;
+  width: 100%;
+  background: rgb(0, 0, 0);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  overflow: hidden !important;
+  opacity: 1;
+  z-index: 10;
+}
+
+
 @keyframes draw {
   0% {
     stroke-dashoffset: 4500;
@@ -77,4 +95,17 @@ body {
   text-transform: uppercase;
   margin-left: 20px;
   font-weight: bolder;
+}
+
+.textsContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  width: 280px;
+  font-size: 17px;
+  overflow: hidden;
+  font-weight: 800;
+  opacity: 1;
+  color: white;
 }
