--- a/src/components/Projects/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/Projects/ProjectInfo/ProjectInfo.module.css
@@ -1,4 +1,4 @@
-@import "../../vars.css";
+@import "../../../vars.css";
 
 .container {
   margin-top: 76px;
@@ -18,8 +18,9 @@
 .projects {
   margin-top: 37px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
+  align-items: center;
 }
