--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,6 +1,7 @@
 @import "../../vars.css";
 
 .container {
+  margin-top: 76px;
   color: var(--color-text);
   margin-left: 10%;
   margin-right: 10%;
