responsive project card

--- a/src/components/Projects/ProjectCard/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.css
@@ -57,7 +57,6 @@
   background:rgb(40,241,254);
   padding: 2px 22px;
   color: black;
-  
 }
 
 .links {
@@ -81,13 +80,15 @@
 .projectTitle {
   align-items: center;
   display: flex;
-  width: 35vw;
+  width: 30vw;
+  margin-top: -25px;
 }
 
 .date {
   align-items: center;
   display: flex;
   justify-content: center;
+  margin-top: -25px;
 }
 
 
@@ -96,4 +97,36 @@
   display: flex;
   justify-content: center;
   width: 20px;
+}
+
+
+@media screen and (max-width: 910px) {
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+    border-radius: 10px;
+    box-shadow: 0 16px 14px 0 #04152d;
+    padding: 18px 24px;
+    width: 80vw;
+    border-style: solid;
+    border-color: rgb(230, 66, 16);
+    border-width: 1px;
+    cursor: pointer;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .skills {
+    justify-content: center;
+  }
+
+  .projectTitle {
+    align-items: center;
+    display: flex;
+    width: 75vw;
+    justify-content: center;
+    text-align: center;
+    margin-top: -25px;
+  }
+  
 }
