--- a/src/components/Projects/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/Projects/ProjectInfo/ProjectInfo.module.css
@@ -20,6 +20,15 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
+  gap: 6rem;
   align-items: center;
+}
+
+
+@media screen and (max-width: 910px) {
+
+  .title {
+    margin-bottom: 70px;
+  }
+
 }
