--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -41,22 +41,32 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
+  cursor: pointer;
 }
 
 .link {
-  background-color: rgb(33, 82, 162);
   display: flex;
   align-items: center;
+  border-color: rgba(87, 87, 87, 0.377);
   border-radius: 18px;
   padding-left: 10px;
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-
+  background-image: linear-gradient(
+    100deg,
+    rgba(3, 161, 214, 0.42) 10%,
+    rgba(255, 255, 255, 0) 90%
+  );
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  transition: 0.4s;
+  border-style: solid;
+  border-width: 0.1px;
 }
 
 .link:hover  {
-  background-color: rgb(40,241,254);
+  background-size: 100% 100%;
 
 }
 
