--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,12 +1,9 @@
 @import "../../vars.css";
 
 .container {
-  position: relative;
   border-radius: 15px;
   margin-top: 129px;
   z-index: 1;
-  margin-left: 10%;
-  margin-right: 10%;
 }
 
 .title {
@@ -21,6 +18,9 @@
 .content {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100vw;
 }
 
 .aboutImage {
@@ -40,7 +40,7 @@
   align-items: center;
   border-radius: 20px;
   list-style: none;
-  padding: 25px;
+  padding: 15px;
   background-image: linear-gradient(
     90deg,
     rgba(165, 215, 232, 0.42) 0%,
@@ -56,18 +56,16 @@
 }
 
 .aboutItem h3 {
-  font-size: 25px;
+  font-size: 15px;
   font-weight: 600;
 }
 
 .aboutItem p {
-  font-size: 25px;
+  font-size: 15px;
 }
 
 
 .containerMotion {
-  width: 300px;
-  height: 300px;
   display: flex;
   place-content: center;
   place-items: center;
@@ -82,7 +80,7 @@
   background: white;
   border-radius: inherit;
   cursor: grabbing;
-  
+  align-items: center;
 }
 
 .itemMotion:hover {
