--- a/src/components/organisms/Projects/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/organisms/Projects/ProjectInfo/ProjectInfo.module.css
@@ -1,4 +1,4 @@
-@import "../../../vars.css";
+@import "../../../../vars.css";
 
 .container {
   color: var(--color-text);
@@ -25,15 +25,7 @@
 }
 
 
-.word{
-  margin-left: 10px;
-  position: relative;
-}
 
-.shadow{
-  position: absolute;
-  opacity: 0.1;
-}
 @media screen and (max-width: 910px) {
 
   .title {
