--- a/src/components/organisms/About/About.module.css
+++ b/src/components/organisms/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   border-radius: 15px;
-  margin-top: 129px;
+  margin-top: 70px;
   z-index: 1;
 }
 
@@ -11,14 +11,13 @@
   font-size: 35px;
   font-weight: 700;
   letter-spacing: 1.75px;
-  text-transform: uppercase;
   text-align: center;
 }
 
 .content {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
 }
@@ -31,7 +30,9 @@
   color: var(--color-text);
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  margin-top: 20px;
+  gap: 40px;
+  width: 40vw;
 }
 
 .aboutItem {
@@ -70,7 +71,6 @@
   place-content: center;
   place-items: center;
   overflow: hidden;
-  background: rgba(255, 255, 255, 0.2);
   border-radius: 30px;
 }
 
@@ -89,6 +89,11 @@
 
 
 @media screen and (max-width: 830px) {
+
+  .aboutItems {
+    width: 80vw;
+  }
+
   .container {
     background-color: transparent;
     padding-left: 0;
@@ -97,11 +102,10 @@
 
   .content {
     flex-direction: column;
+    margin-top: 40px;
   }
 
-  .aboutImage {
-    display: none;
-  }
+
 
   .aboutItems {
     margin-top: 29px;
