--- a/src/components/organisms/About/About.module.css
+++ b/src/components/organisms/About/About.module.css
@@ -17,9 +17,10 @@
 .content {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100vw;
+  gap: 10vw;
 }
 
 .aboutImage {
