--- a/src/components/organisms/About/About.module.css
+++ b/src/components/organisms/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   border-radius: 15px;
-  margin-top: 70px;
+  margin-top: 30vh;
   z-index: 1;
 }
 
@@ -21,6 +21,8 @@
   align-items: center;
   width: 100vw;
   gap: 10vw;
+  margin-top: 15vh;
+
 }
 
 .aboutImage {
@@ -42,20 +44,20 @@
   align-items: center;
   border-radius: 20px;
   list-style: none;
-  padding: 15px;
-  background-image: linear-gradient(
-    90deg,
-    rgba(165, 215, 232, 0.42) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  background-size: 0 100%;
-  background-repeat: no-repeat;
-  transition: 0.4s;
+  padding: 25px;
 }
 
-.aboutItem:hover {
-  background-size: 100% 100%;
+
+.aboutItemText {
+  display: flex;
+  flex-direction: column;
+  align-items:start;
+  border-radius: 20px;
+  list-style: none;
+  padding: 25px;
+  gap: 10px;
 }
+
 
 .aboutItem h3 {
   font-size: 15px;
@@ -99,11 +101,11 @@
     background-color: transparent;
     padding-left: 0;
     padding-right: 0;
+    margin-top: 20vh;
   }
 
   .content {
     flex-direction: column;
-    margin-top: 40px;
   }
 
 
