--- a/src/components/organisms/Contact/Contact.module.css
+++ b/src/components/organisms/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 @import "../../../vars.css";
 
 .container {
+  margin-top: 30vh;
   color: var(--color-text);
   width: 100vw;
   padding: 58px 10%;
@@ -84,6 +85,7 @@
   .container {
     flex-direction: column;
     gap: 23px;
+    margin-top: 20vh;
   }
 
   .text {
