--- a/src/components/organisms/Projects/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/organisms/Projects/ProjectInfo/ProjectInfo.module.css
@@ -4,6 +4,7 @@
   color: var(--color-text);
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 26vh;
 }
 
 .title {
@@ -12,10 +13,12 @@
   font-weight: 700;
   letter-spacing: 1.75px;
   text-align: center;
+  font-family: var(--font-roboto);
+
 }
 
 .projects {
-  margin-top: 57px;
+  margin-top: 15vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -30,6 +33,10 @@
 
   .title {
     margin-bottom: 70px;
+  }
+
+  .container {
+    margin-top: 20vh;
   }
 
 }
