--- a/src/components/organisms/Contact/Contact.module.css
+++ b/src/components/organisms/Contact/Contact.module.css
@@ -88,11 +88,17 @@
     margin-top: 20vh;
   }
 
-  .text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .title {
+    font-size: 30px;
   }
+
+  .text p {
+    margin-top: 2.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: 2px;
+  }
+
 
   .links {
     align-items: center;
