--- a/src/components/organisms/Skills/Skills.module.css
+++ b/src/components/organisms/Skills/Skills.module.css
@@ -23,9 +23,10 @@
 
 .skills {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   gap: 15px;
   width: 100%;
 }
@@ -139,6 +140,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
     gap: 50px;
 
   }
