--- a/src/components/organisms/Skills/Skills.module.css
+++ b/src/components/organisms/Skills/Skills.module.css
@@ -19,6 +19,7 @@
   display: flex;
   margin-top: 51px;
   flex-direction: row;
+
 }
 
 .skills {
@@ -27,7 +28,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: 15px;
+  gap: 34px;
   width: 100%;
 }
 
@@ -40,6 +41,7 @@
 .skillInfo{
   display: flex;
   gap: 10px;
+  justify-content: space-between;
 }
 
 
@@ -51,6 +53,9 @@
   font-weight: 700;
   letter-spacing: 1.75px;
   text-align: center;
+  border-bottom: white;
+  border-bottom-style: solid;
+  border-width: 0.01px;
 }
 
 .skillImageContainer {
@@ -119,6 +124,40 @@
   margin-left: 17px;
 }
 
+
+.containerMotion {
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 30px;
+  width: 80vw;
+  margin-top: 40px;
+}
+
+
+.itemMotion {
+  border-radius: inherit;
+  cursor: grabbing;
+  align-items: center;
+  border-style: solid;
+  border-width: 0.5px;
+  padding: 10px;
+  margin-left: -20vw;
+}
+
+.itemMotionBack {
+  border-radius: inherit;
+  cursor: grabbing;
+  align-items: center;
+  border-style: solid;
+  border-width: 0.5px;
+  padding: 10px;
+  margin-left: 20vw;
+}
+
+
+
 @media screen and (max-width: 967px) {
 
   .title {
@@ -148,5 +187,13 @@
   .history {
     width: 100%;
     gap: 9px;
+  }
+
+  .itemMotionBack {
+    margin-left: 0;
+  }
+
+  .itemMotion {
+    margin-left: 0;
   }
 }
