--- a/src/components/organisms/Experience/Experience.module.css
+++ b/src/components/organisms/Experience/Experience.module.css
@@ -1,7 +1,8 @@
 @import "../../../vars.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 .container {
-  margin-top: 25vh;
+  margin-top: 30vh;
   color: var(--color-text);
   width: 100vw;
   padding: 58px 10%;
@@ -19,7 +20,6 @@
   font-weight: 700;
   letter-spacing: 1.75px;
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .image {
@@ -81,6 +81,90 @@
 }
 
 
+.timelineSection{
+	min-height: 100vh;
+	padding: 100px 15px;
+}
+.timelineItems{
+	max-width: 1000px;
+	margin:auto;
+	display: flex;
+	flex-wrap: wrap;
+	position: relative;
+}
+.timelineItems::before{
+	content: '';
+	position: absolute;
+	width: 2px;
+	height: 100%;
+	background-color: #2f363e;
+	left: calc(50% - 1px);
+}
+.timelineItem{
+	margin-bottom: 40px;
+	width: 100%;
+	position: relative;
+}
+.timelineItem:last-child{
+	margin-bottom: 0;
+}
+.timelineItem:nth-child(odd){
+    padding-right: calc(50% + 30px);
+	text-align: right;
+}
+.timelineItem:nth-child(even){
+    padding-left: calc(50% + 30px);
+}
+.timelineDot{
+	height: 16px;
+	width: 16px;
+	background-color: #eaa023;
+	position: absolute;
+	left: calc(50% - 8px);
+	border-radius: 50%;
+	top:10px;
+}
+.timelineDate{
+	font-size: 18px;
+	color: #eaa023;
+	margin:6px 0 15px;
+}
+.timelineContent{
+    background-color: #2f363e;
+	padding: 30px;
+	border-radius: 5px;
+}
+.timelineContent h3{
+    font-size: 20px;
+	color: #ffffff;
+	margin:0 0 10px;
+	text-transform: capitalize;
+	font-weight: 500;
+}
+.timelineContent p{
+    color: #c8c8c8;
+	font-size: 16px;
+	font-weight: 300;
+	line-height: 22px;
+}
+
+/* responsive */
+@media(max-width: 767px){
+	.timelineItems::before{
+		left: 7px;
+	}
+	.timelineItem:nth-child(odd){
+		padding-right: 0;
+		text-align: left;
+	}
+	.timelineItem:nth-child(odd),
+	.timelineItem:nth-child(even){
+		padding-left: 37px;
+	}
+	.timelineDot{
+		left:0;
+	}
+}
 
 @media screen and (max-width: 830px) {
   .container {
