mise a jours experience

--- a/src/components/organisms/Experience/Experience.module.css
+++ b/src/components/organisms/Experience/Experience.module.css
@@ -13,8 +13,8 @@
 .footer {
   padding-top: 5rem;
 }
-.title {
 
+.title {
   color: var(--color-text);
   font-size: 35px;
   font-weight: 700;
@@ -69,7 +69,6 @@
 
 .link:hover  {
   background-size: 100% 100%;
-
 }
 
 .link a {
@@ -80,11 +79,11 @@
   letter-spacing: 1.5px;
 }
 
-
 .timelineSection{
 	min-height: 100vh;
 	padding: 100px 15px;
 }
+
 .timelineItems{
 	max-width: 1000px;
 	margin:auto;
@@ -92,6 +91,7 @@
 	flex-wrap: wrap;
 	position: relative;
 }
+
 .timelineItems::before{
 	content: '';
 	position: absolute;
@@ -100,47 +100,59 @@
 	background-color: #2f363e;
 	left: calc(50% - 1px);
 }
+
 .timelineItem{
 	margin-bottom: 40px;
 	width: 100%;
 	position: relative;
 }
+
 .timelineItem:last-child{
 	margin-bottom: 0;
 }
+
 .timelineItem:nth-child(odd){
     padding-right: calc(50% + 30px);
 	text-align: right;
 }
+
 .timelineItem:nth-child(even){
     padding-left: calc(50% + 30px);
+    text-align: left;
+
 }
+
 .timelineDot{
 	height: 16px;
 	width: 16px;
-	background-color: #eaa023;
+	background-color: rgb(40,241,254);
 	position: absolute;
 	left: calc(50% - 8px);
 	border-radius: 50%;
 	top:10px;
 }
+
 .timelineDate{
 	font-size: 18px;
-	color: #eaa023;
+	color: rgb(40,241,254);
 	margin:6px 0 15px;
 }
+
 .timelineContent{
-    background-color: #2f363e;
 	padding: 30px;
 	border-radius: 5px;
+  border-color: rgb(50, 61, 70);
+  border-style: solid;
+  border-width: 0.1px;
 }
+
 .timelineContent h3{
     font-size: 20px;
 	color: #ffffff;
 	margin:0 0 10px;
-	text-transform: capitalize;
 	font-weight: 500;
 }
+
 .timelineContent p{
     color: #c8c8c8;
 	font-size: 16px;
@@ -153,17 +165,21 @@
 	.timelineItems::before{
 		left: 7px;
 	}
+
 	.timelineItem:nth-child(odd){
 		padding-right: 0;
 		text-align: left;
 	}
+
 	.timelineItem:nth-child(odd),
 	.timelineItem:nth-child(even){
 		padding-left: 37px;
 	}
+
 	.timelineDot{
 		left:0;
 	}
+
 }
 
 @media screen and (max-width: 830px) {
@@ -183,7 +199,6 @@
     font-weight: 400;
     letter-spacing: 2px;
   }
-
 
   .links {
     align-items: center;
