--- a/src/components/organisms/Navbar/Navbar.module.css
+++ b/src/components/organisms/Navbar/Navbar.module.css
@@ -1,13 +1,16 @@
 @import "../../../vars.css";
 
 .navbar {
-  position: relative;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 61px;
+  padding: 0 5%;
   z-index: 2;
-  margin: 0 10%;
+  /* margin: 0 5%; */
+  background-color: var(--color-bg);
+  width: 100%;
+  height: 12vh;
 }
 
 .title {
@@ -38,16 +41,14 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 950px) {
-  .navbar {
-    padding-top: 30px;
-  }
 
-}
 @media screen and (max-width: 830px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+    height: 10vh;
+    padding: 5%;
+    margin-top: -29px;
   }
 
   .menu {
