--- a/src/components/organisms/Skills/Skills.module.css
+++ b/src/components/organisms/Skills/Skills.module.css
@@ -145,6 +145,7 @@
   padding: 10px;
   margin-left: -20vw;
   min-width: 200px;
+  background-color: var(--color-bg);
 }
 
 .itemMotionBack {
@@ -156,6 +157,8 @@
   padding: 10px;
   margin-left: 20vw;
   min-width: 200px;
+  background-color: var(--color-bg);
+
 }
 
 
