--- a/src/components/organisms/About/About.module.css
+++ b/src/components/organisms/About/About.module.css
@@ -19,8 +19,6 @@
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  gap: 10vw;
   margin-top: 15vh;
 
 }
@@ -28,7 +26,7 @@
 .aboutImage {
   width: 40vw;
   min-width: 250px;
-  max-width: 450px;
+  max-width: 60vh;
 }
 
 .aboutItems {
