--- a/src/components/organisms/Navbar/Navbar.module.css
+++ b/src/components/organisms/Navbar/Navbar.module.css
@@ -44,17 +44,16 @@
 
 @media screen and (max-width: 930px) {
   .navbar {
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
     align-items: flex-start;
     height: 10vh;
     padding: 5%;
     margin-top: -29px;
+    justify-content: space-between;
   }
 
   .menu {
-    position: absolute;
-    right: 0;
-    margin-right: 10%;
     flex-direction: column;
     align-items: flex-end;
     gap: 11px;
