--- a/src/components/organisms/Hero/Hero.module.css
+++ b/src/components/organisms/Hero/Hero.module.css
@@ -1,172 +1,87 @@
 @import "../../../vars.css";
-
 .container {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  z-index: 1;
-  margin-left: 5%;
-  margin-right: 5%;
-  min-height: calc(100vh - 101px);
-  padding-top: 20vh;
+  justify-content: center;
+  overflow: hidden;
+  flex-direction: column;
+  height: 100vh;
+}
+
+
+@keyframes scrollRight {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.backgroundText {
+  position: absolute;
+  left: 0;
+  font-size: 30vw;
+  font-weight: bold;
+  color: rgba(163, 149, 149, 0.486);
+  white-space: nowrap;
+  animation: scrollRight 40s linear infinite;
+  pointer-events: none;
+  z-index: 0;
+}
+
+
+.heroImg {
+  z-index: 2;
+  width: 70vw;
+  height: auto;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-left: -116px; 
+}
+
+.content {
+  z-index: 3;
+  text-align: center;
+  bottom: 0%;
+  color: #cccbcb;
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  margin-top: 20px;
 
 }
+
+.hello {
+  font-size: 1.5rem;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
 
 .links {
   display: flex;
   flex-direction: row;
   list-style: none;
-  gap: 26px;
+  gap: 30px;
   width: 100%;
   opacity: 0;
-
+  justify-content: center;
 }
 
-.image {
-  width: 30px;
-}
-
-
-.link {
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  color: var(--color-text);
-  z-index: 1;
-  margin-top: 10px;
-}
-
-
-.hello {
-  margin-left: -22px;
-  font-size: calc(1rem + 2vw); /* Utilisation de vw pour ajuster la taille du texte en fonction de la largeur de la fenêtre */
-  font-weight: 900;
-  font-family: var(--font-roboto);
-  background: linear-gradient(92.72deg, rgb(40,241,254) 0%, #765eed 100%);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  margin-bottom: 1rem;
-  opacity: 0;
-
-}
-
-
-
-.title {
-  font-size: calc(2rem + 2vw); /* Utilisation de vw pour ajuster la taille du texte en fonction de la largeur de la fenêtre */
-  font-weight: 900;
-  margin-bottom: 1rem;
-  font-family: var(--font-roboto);
-  background: linear-gradient(92.72deg, rgb(40,241,254) 0%, #765eed 100%);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  opacity: 0;
-
-}
-
-.description {
-  font-size: 2rem;
-  font-family: var(--font-roboto);
-  margin-bottom: 1rem;
-  display: flex;
-  opacity: 0;
-}
-
-.job {
-  font-weight: 700;
-  color: rgb(255, 255, 255);
-}
-
-.contactBtn {
-  text-decoration: none;
-  background-color: var(--color-primary);
-  color: var(--color-text);
-  border-radius: 100px;
-  font-size: 30px;
-  font-weight: 600;
-  padding: 17px 26px;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
-}
-
-.heroImg {
-  width: 35%;
-  z-index: 0;
-  border-radius: 50%;
-}
-
-.topBlur {
-  position: absolute;
-  width: 50vw;
-  height: 50vw;
-  min-width: 350px;
-  min-width: 350px;
-  top: -128px;
-  left: -10vw;
-  border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
-  filter: blur(100px);
-  z-index: 0;
-}
-
-.bottomBlur {
-  position: absolute;
-  width: 70vw;
-  height: 50vw;
-  min-width: 350px;
-  min-width: 250px;
-  top: 246px;
-  right: -25vw;
-  border-radius: 764px;
-  background: rgba(25, 55, 109, 0.7);
-  filter: blur(100px);
-  z-index: 0;
-}
-
-@media screen and (max-width: 910px) {
-  .container {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    margin-top: 26px;
-    padding-top: 14vh;
-  }
-
-  .content {
-    align-items: center;
-    margin-bottom: 5vh;
-  }
-
-  .heroImg {
-    width: 35%;
-    z-index: 0;
-    border-radius: 50%;
-    margin-bottom: 5vh;
-    min-width:250px;
-
-  }
-
-  
-  .hello {
-    font-size: calc(1rem + 1vw); /* Utilisation de vw pour ajuster la taille du texte en fonction de la largeur de la fenêtre */
-  }
-
-  .title {
-    font-size: calc(2rem + 1vw); 
-  }
-
-  .description {
-    font-size: calc(1rem + 1vw); /* Utilisation de vw pour ajuster la taille du texte en fonction de la largeur de la fenêtre */
-  }
-
-  .links {
-    justify-content: center;
-  }
+.link img {
+  width: 24px;
+  height: 24px;
 }
